; ModuleID = '/home/carl/AnghaBench/xLua/build/luasocket/extr_options.c_opt_meth_getoption.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luasocket/extr_options.c_opt_meth_getoption.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 (i32*, i32)*, i32 }

@.str = private unnamed_addr constant [27 x i8] c"unsupported option `%.35s'\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @opt_meth_getoption(i32* %0, %struct.TYPE_3__* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca [45 x i8], align 16
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32*, i32** %4, align 8
  %10 = call i8* @luaL_checkstring(i32* %9, i32 2)
  store i8* %10, i8** %7, align 8
  br label %11

11:                                               ; preds = %25, %3
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 8
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %23

16:                                               ; preds = %11
  %17 = load i8*, i8** %7, align 8
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 8
  %21 = call i64 @strcmp(i8* %17, i32 %20)
  %22 = icmp ne i64 %21, 0
  br label %23

23:                                               ; preds = %16, %11
  %24 = phi i1 [ false, %11 ], [ %22, %16 ]
  br i1 %24, label %25, label %28

25:                                               ; preds = %23
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 1
  store %struct.TYPE_3__* %27, %struct.TYPE_3__** %5, align 8
  br label %11

28:                                               ; preds = %23
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 0
  %31 = load i32 (i32*, i32)*, i32 (i32*, i32)** %30, align 8
  %32 = icmp ne i32 (i32*, i32)* %31, null
  br i1 %32, label %40, label %33

33:                                               ; preds = %28
  %34 = getelementptr inbounds [45 x i8], [45 x i8]* %8, i64 0, i64 0
  %35 = load i8*, i8** %7, align 8
  %36 = call i32 @sprintf(i8* %34, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i8* %35)
  %37 = load i32*, i32** %4, align 8
  %38 = getelementptr inbounds [45 x i8], [45 x i8]* %8, i64 0, i64 0
  %39 = call i32 @luaL_argerror(i32* %37, i32 2, i8* %38)
  br label %40

40:                                               ; preds = %33, %28
  %41 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %41, i32 0, i32 0
  %43 = load i32 (i32*, i32)*, i32 (i32*, i32)** %42, align 8
  %44 = load i32*, i32** %4, align 8
  %45 = load i32, i32* %6, align 4
  %46 = call i32 %43(i32* %44, i32 %45)
  ret i32 %46
}

declare dso_local i8* @luaL_checkstring(i32*, i32) #1

declare dso_local i64 @strcmp(i8*, i32) #1

declare dso_local i32 @sprintf(i8*, i8*, i8*) #1

declare dso_local i32 @luaL_argerror(i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
